# proj-ticker

./: .gitignore  CHANGELOG.md  README.md  proj-ticker.cabal  stack.yaml
app/: Main.hs
src/: Format.hs  Sockets.hs  UI.hs  UITypes.hs  Utils.hs  WebTypes.hs
test/: tests.hs
