cabal-version:      2.4
name:               proj-ticker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proj-ticker
    main-is:          Main.hs
    ghc-options:      -threaded
                      -fwarn-incomplete-patterns
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , brick 
                    , containers
                    , data-default
                    , http-client
                    , lens
                    , stm
                    , text
                    , websockets
                    , wuss
    hs-source-dirs:   app, src
    default-language: Haskell2010

