cabal-version:      2.4
name:               proj-ticker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proj-ticker
    hs-source-dirs:   app, src
    main-is:          Main.hs
    ghc-options:      -threaded
                      -fwarn-incomplete-patterns
    other-modules:    WebTypes
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , hspec
                    , aeson
                    , brick
                    , bytestring
                    , containers
                    , data-default
                    , http-client
                    , lens
                    , stm
                    , text
                    , random
                    , raw-strings-qq
                    , websockets
                    , wuss
    default-language: Haskell2010

test-suite proj-ticker-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src 
    main-is:          tests.hs
    other-modules:    WebTypes
    ghc-options:      -Wall -fwarn-tabs
    build-depends:    base ^>=4.14.3.0
                    , hspec
                    , QuickCheck 
                    , aeson
                    , brick
                    , bytestring
                    , containers
                    , data-default
                    , http-client
                    , lens
                    , stm
                    , text
                    , raw-strings-qq
                    , websockets
                    , wuss
    default-language: Haskell2010
