cabal-version:      2.4
name:               proj-ticker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proj-ticker
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded
                      -fwarn-incomplete-patterns
    build-depends:    base ^>=4.14.3.0
                    , proj-ticker
    other-extensions:
    default-language: Haskell2010

library
    hs-source-dirs:   src, src/tmp
    exposed-modules:  UI
    other-modules:    WebTypes
                    , Format
                    , UITypes
                    , Sockets
                    , TableDemo
    ghc-options:      -fwarn-incomplete-patterns
    build-depends:    base ^>=4.14.3.0
                    , brick == 1.1.*
                    , hspec
                    , aeson
                    , bytestring
                    , containers
                    , data-default
                    , formatting
                    , http-client
                    , lens
                    , stm
                    , text
                    , time
                    , transformers
                    , random
                    , raw-strings-qq
                    , websockets
                    , wuss
                    , vty
    default-language: Haskell2010

test-suite proj-ticker-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src 
    main-is:          tests.hs
    other-modules:    WebTypes
                    , Format
                    , Sockets
                    , UITypes
    ghc-options:      -Wall -fwarn-tabs
    build-depends:    base ^>=4.14.3.0
                    , proj-ticker
                    , brick == 1.1.*
                    , aeson
                    , bytestring
                    , data-default
                    , formatting
                    , hspec
                    , lens
                    , containers
                    , QuickCheck
                    , random
                    , raw-strings-qq
                    , stm
                    , text
                    , time
                    , websockets
                    , wuss
    default-language: Haskell2010
